# tree-sitter-ocaml

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  fuzz.yml  publish.yml
bindings/c/: tree-sitter-ocaml-interface.h  tree-sitter-ocaml-interface.pc.in  tree-sitter-ocaml-type.pc.in  tree-sitter-ocaml.h  tree-sitter-ocaml.pc.in
bindings/c/tree_sitter/: tree-sitter-ocaml-type.h  tree-sitter-ocaml.h
bindings/go/: binding_interface.go  binding_ocaml.go  binding_test.go  binding_type.go  go.mod  go.sum
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js  ocaml.js  ocaml_interface.js  ocaml_type.js  type.js
bindings/python/: README.md
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ocaml/: __init__.py  __init__.pyi  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/TreeSitterOCaml/: ocaml.h
bindings/swift/TreeSitterOCamlTests/: TreeSitterOCamlTests.swift
common/: common.mak  scanner.h
corpus/: attributes.txt  comments.txt  expressions.txt  module-expressions.txt  module-items.txt  module-types.txt  patterns.txt  toplevel.txt  types.txt
grammars/interface/: CMakeLists.txt  Makefile  grammar.js  package.json
grammars/interface/src/: grammar.json  node-types.json  scanner.c
grammars/interface/test/corpus/: module-items.txt
grammars/menhir/: grammar.js  package.json
grammars/menhir/src/: grammar.json  node-types.json  scanner.c
grammars/menhir/test/corpus/: calc.txt
grammars/ocaml/: CMakeLists.txt  Makefile  grammar.js  package.json
grammars/ocaml/corpus/: patterns.txt
grammars/ocaml/src/: grammar.json  node-types.json  scanner.c  tree_sitter
grammars/type/: CMakeLists.txt  Makefile  grammar.js  package.json
grammars/type/src/: grammar.json  node-types.json  scanner.c
grammars/type/test/corpus/: types.txt
include/: scanner.h
interface/corpus/: module-specification.txt
interface/src/: grammar.json  node-types.json  scanner.cc
ml/: grammar.js
ml/corpus/: expressions.txt  module-implementation.txt  module-items.txt
ml/src/: grammar.json  node-types.json
mli/: grammar.js  index.js
mli/corpus/: module-items.txt  module-specification.txt
mli/src/: grammar.json  node-types.json  scanner.cc
ocaml/: grammar.js
ocaml/corpus/: comments.txt  expressions.txt  module-implementation.txt  module-items.txt  patterns.txt  types.txt
ocaml/src/: grammar.json  node-types.json  scanner.cc
queries/: highlights.scm  locals.scm  tags.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  scanner.cc
test/: files.txt  invalid-files.txt  parse-examples.sh
test/corpus/: attributes.txt  comments.txt  expressions.txt  module-expressions.txt  module-implementation.txt  module-items.txt  module-types.txt  oxcaml.txt  patterns.txt  toplevel.txt  types.txt
test/corpus/ocaml_interface/: module-specification.txt
test/corpus/ocaml_type/: types.txt
test/highlight/: constants.ml
test/tags/: classes.ml  functions.ml  modules.ml  types.ml
