[package]
name = "tree-sitter-ocaml"
description = "OCaml grammar for tree-sitter"
version = "0.22.0"
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ocaml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-ocaml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammars/ocaml/grammar.js",
  "grammars/ocaml/src/*.c",
  "grammars/ocaml/src/*.json",
  "grammars/interface/grammar.js",
  "grammars/interface/src/*.c",
  "grammars/interface/src/*.json",
  "grammars/type/grammar.js",
  "grammars/type/src/*.c",
  "grammars/type/src/*.json",
  "include/*",
  "queries/*"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22"

[build-dependencies]
cc = "1.0.87"
