[package]
name = "tree-sitter-ocaml"
description = "OCaml grammar for tree-sitter"
version = "0.23.2"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ocaml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-ocaml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust",
  "common",
  "grammars/ocaml/grammar.js",
  "grammars/ocaml/src",
  "grammars/interface/grammar.js",
  "grammars/interface/src",
  "grammars/type/grammar.js",
  "grammars/type/src",
  "queries",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
