[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-ocaml"
description = "OCaml grammar for tree-sitter"
version = "0.24.0"
keywords = ["incremental", "parsing", "tree-sitter", "ocaml"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "bindings/python/README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-ocaml"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
